--- a/college.html
+++ b/college.html
@@ -1,55 +1,10 @@
-<h1>My College Notes</h1>
-<iframe
-  src="pdfs/Mathematics 11 August.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe src="pdfs/English SSI.pdf" width="100%" height="600px"></iframe>
-<iframe src="pdfs/Chemistry Theory.pdf" width="100%" height="600px"></iframe>
-<iframe
-  src="pdfs/Chemistry Lab Practicals 1-3.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe src="pdfs/Electrical Lab.pdf" width="100%" height="600px"></iframe>
-<iframe
-  src="pdfs/Electrical Theory Till aug 16.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Exp 3 and 4 Basic Electrical Lab.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Introduction to Python.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Mechanical Lab work 1.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Mechanical Theory V1.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Practical 6 and 7 ITP lab.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Python Practical File Till 11 August.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe
-  src="pdfs/Reasoning and Aptitude.pdf"
-  width="100%"
-  height="600px"
-></iframe>
-<iframe src="pdfs/SST RJN.pdf" width="100%" height="600px"></iframe>
+<h1>My College</h1>
+<h2>Check Out My College Stuffiezzz:</h2>
+
+<button><a href="maths.html">Maths Stuffie</a></button>
+<button><a href="electrical.html">Electrical Stuffie</a></button>
+<button><a href="itp.html">Python Stuffie</a></button>
+<button><a href="mechanical.html">Mechanical Stuffie</a></button>
+<button><a href="govt.html">Government Exam Perp Stuffie</a></button>
+<button><a href="english.html">English Stuffie</a></button>
+<button><a href="chemistry.html">Chemistry Stuffie</a></button>
