new file for itp notes

--- a/itp.html
+++ b/itp.html
@@ -8,3 +8,4 @@
 </iframe>
 <iframe src="pdfs/Practical 6 and 7 ITP lab.pdf" width="100%" height="600px">
 </iframe>
+<iframe src="pdfs/ITP Assignment 1.pdf" width="100%" height="600px"> </iframe>
