--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="Description" content="Here you'll get to know everything about me">
 <title>My First Webpage</title>
 <link rel="icon" href="icon.jpeg" type="image/x-icon">
-<link rel="stylesheet" href="main.css" type="text/css">
+<link rel="stylesheet" href="main.css">
     </head>
     <body title="Just Learning">
          <!-- Simple Tab Navigation (No CSS) -->
 <hr>
-<b>Navigation:</b>
+<h2 id="navigator">Navigation:</h2> 
 <br>
 <a href="learnings.html" target="_blank"><button>Learning</button></a> !
 
@@ -180,36 +180,33 @@
             </label>
             <input type="text" name="firstname"
             id="firstname" placeholder="Pranay"
-            autocomplete="on" required autofocus>
+            autocomplete='on'>
             </p>
             <p>
             <label for="lastname"> LastName:
             </label>
             <input type="text" name="lastname"
             id="lastname" placeholder="Keshwani"
-            autocomplete="on" required autofocus>
+            autocomplete='on'>
             </p>
             <p>
             <label for="Password"> Password:
             </label>
             <input type="password" name="Password"
-            id="Password" placeholder="keshpranay918@5610"
-             required autofocus>
+            id="Password" placeholder="keshpranay918@5610">
             </p>
             <p>
             <label for="Phone"> Phone Num:
             </label>
             <input type="tel" name="Phone"
             id="Phone" placeholder="9636125840"
-            pattern="[0-9]{3}[0-9]{3} [0-9]{4}"
-             required autofocus>
+            pattern="[0-9]{3}[0-9]{3} [0-9]{4}">
             </p>
             <p>
             <label for="Decade"> Fav.Decade:
             </label>
             <input type="number" name="Decade"
-            id="Decade" placeholder="1998-2007" min="1950" max="2030" step="10" pattern="[0-9]{3}[0-9]{3} [0-9]{4}" value="1980"
-             required autofocus>
+            id="Decade" placeholder="1998-2007" min="1950" max="2030" step="10" pattern="[0-9]{3}[0-9]{3} [0-9]{4}" value="1980"'on'>
             </p>
             
         </form>
