--- a/about.html
+++ b/about.html
@@ -34,12 +34,14 @@
     </ul>
     <hr />
 
-    &lt;&lt;&lt;&copy;<abbr title="Kity & Pranay"
-      ><a href="about.html">KP</a></abbr
-    >
-    &gt;&gt;&gt;
-    <p>
-      <a href="/">Back to home. </a>
-    </p>
+    <footer>
+      <a href="about.html" style="text-align: center"><<< &copy;KP >>></a>
+      <p>
+        <a href="#">BACK TO TOP</a>
+      </p>
+      <p>
+        <a href="/" style="text-align: center">Back To Home. </a>
+      </p>
+    </footer>
   </body>
 </html>
