--- a/index.html
+++ b/index.html
@@ -4,32 +4,35 @@
         <meta charset="UTF-8">
         <meta name="Author" content="Pranay Keshwani">
         <meta name="Description" content="Here you'll get to know everything about me">
-<title>My First Webpage</title>
-<link rel="icon" href="icon.jpeg" type="image/x-icon">
+<title>You Know Me?</title>
+<link rel="icon" href="icon.jpeg" type="image/x-icon" style="border-radius: 50%">
 <link rel="stylesheet" href="main.css">
     </head>
-    <body title="Just Learning">
+    <body title="I am The Best!">
          <!-- Simple Tab Navigation (No CSS) -->
 <hr>
-<h2 id="navigator">Navigation:</h2> 
+<header>
+<h2 id="navigator">NavBar</h2> 
 <br>
-<a href="learnings.html" target="_blank"><button>Learning</button></a> !
+<a href="learnings.html" target="_blank"><button>Learning</button></a> 
 
 <a href="college.html" target="_blank"><button> College Materials </button>
 
-</a> !
+</a> 
 
-<a href="skills.html" target="_blank"><button>Skills</button></a> !
+<a href="skills.html" target="_blank"><button>Skills</button></a> 
 
-<a href="https://youtube.com/@kpgamer918" target="_blank"><button>YouTube</button></a> !
+<a href="https://youtube.com/@kpgamer918" target="_blank"><button>YouTube</button></a> 
 
-<a href="music.html" target="_blank"><button>Music</button></a> !
+<a href="music.html" target="_blank"><button>Music</button></a> 
 
-<a href="inventions.html" target="_blank"><button>inventions</button></a> !
+<a href="inventions.html" target="_blank"><button>inventions</button></a> 
 
-<a href="certificates.html" target="_blank"><button>Certificates</button></a>!
+<a href="certificates.html" target="_blank"><button>Certificates</button></a>
 
-<a href="moviesuggests.html" target="_blank"><button>Movie Suggestions</button></a>!
+<a href="moviesuggests.html" target="_blank"><button>Movie Suggestions</button></a>
+</header>
+<div id="MainContent">
 <p>
     <h3>To-Do Courses ASAP:
         <ul>
@@ -212,14 +215,8 @@
         </form>
         </section>
         </main>
-
-        <hr>
-        <footer>
-        &lt;&lt;&lt;&copy;<abbr title="Kity & Pranay"><a href="about.html">KP</a></abbr> &gt;&gt;&gt;
-        <p>
-            <a href="#">BACK TO TOP</a>
-            </footer>
-            <figure> 
+        </div>
+         <figure> 
                 <figcaption>
                     Here is an example of html5 code:
                 </figcaption>
@@ -227,8 +224,15 @@
                     &lt;h1&gt; Hello World! &lt;/h1&gt;
                 </code>
             </figure>
+
+        <hr>
+        <footer>
+        <a href="about.html" style="text-align: center;"><<< &copy;KP >>></a>
+        <p>
+            <a href="#">BACK TO TOP</a>
+            </footer>
+           
         </p>
-        <h2>hello i am pranay</h2>
     </body> 
     <hr>
     <hr>
