--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <meta charset="UTF-8">
         <meta name="Author" content="Pranay Keshwani">
         <meta name="Description" content="Here you'll get to know everything about me">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6YSQ55BW85"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6YSQ55BW85');
+</script>
 <title>You Know Me?</title>
 <link rel="icon" href="icon.jpeg" type="image/x-icon" style="border-radius: 50%">
 <link rel="stylesheet" href="main.css">
