Updates Regarding Certificate and Instagram

--- a/index.html
+++ b/index.html
@@ -20,27 +20,28 @@
     <body title="I am The Best!">
          <!-- Simple Tab Navigation (No CSS) -->
 <hr>
+
 <header>
-<h2 id="navigator">NavBar</h2> 
-<br>
-<a href="learnings.html" target="_blank"><button>Learning</button></a> 
+  <!-- Instagram Icon -->
+  <a href="https://instagram.com/pranaykeshwani" target="_blank" class="instagram-link">
+    <div class="instagram-icon">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
+    </div>
+  </a>
 
-<a href="college.html" target="_blank"><button> College Materials </button>
-
-</a> 
-
-<a href="skills.html" target="_blank"><button>Skills</button></a> 
-
-<a href="https://youtube.com/@kpgamer918" target="_blank"><button>YouTube</button></a> 
-
-<a href="music.html" target="_blank"><button>Music</button></a> 
-
-<a href="inventions.html" target="_blank"><button>inventions</button></a> 
-
-<a href="certificates.html" target="_blank"><button>Certificates</button></a>
-
-<a href="moviesuggests.html" target="_blank"><button>Movie Suggestions</button></a>
+  <h2 id="navigator">NavBar</h2>
+  <br>
+  <a href="learnings.html" target="_blank"><button>Learning</button></a>
+  <a href="college.html" target="_blank"><button>College Materials</button></a>
+  <a href="skills.html" target="_blank"><button>Skills</button></a>
+  <a href="https://youtube.com/@kpgamer918" target="_blank"><button>YouTube</button></a>
+  <a href="music.html" target="_blank"><button>Music</button></a>
+  <a href="inventions.html" target="_blank"><button>Inventions</button></a>
+  <a href="certificates.html" target="_blank"><button>Certificates</button></a>
+  <a href="moviesuggests.html" target="_blank"><button>Movie Suggestions</button></a>
 </header>
+
+
 <div id="MainContent">
 <p>
     <h3>To-Do Courses ASAP:
