--- a/mechanical.html
+++ b/mechanical.html
@@ -2,3 +2,4 @@
 </iframe>
 <iframe src="pdfs/Mechanical Lab work 1.pdf" width="100%" height="600px">
 </iframe>
+<iframe src="pdfs/machine shop.pdf" width="100%" height="600px"> </iframe>
