--- a/itp.html
+++ b/itp.html
@@ -10,7 +10,6 @@
 </iframe>
 <iframe src="pdfs/ITP Assignment 1.pdf" width="100%" height="600px"> </iframe>
 <iframe src="pdfs/ITP assignment 2.pdf" width="100%" height="600px"> </iframe>
-<iframe src="pdfs/ITP assignment 3.pdf.pdf" width="100%" height="600px">
-</iframe>
+<iframe src="pdfs/ITP assignment 3.pdf" width="100%" height="600px"> </iframe>
 <iframe src="pdfs/ITP week 2 practical.pdf" width="100%" height="600px">
 </iframe>
