Optimizing and redesigning website

--- a/college.html
+++ b/college.html
@@ -1,10 +1,22 @@
-<h1>My College</h1>
-<h2>Check Out My College Stuffiezzz:</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kaam Chorrrr Bacchee...</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <h1 style="text-align: center">
+      Even i don't Trust Myself Sometimes!(iykyk)👀
+    </h1>
 
-<button><a href="maths.html">Maths Stuffie</a></button>
-<button><a href="electrical.html">Electrical Stuffie</a></button>
-<button><a href="itp.html">Python Stuffie</a></button>
-<button><a href="mechanical.html">Mechanical Stuffie</a></button>
-<button><a href="govt.html">Government Exam Perp Stuffie</a></button>
-<button><a href="english.html">English Stuffie</a></button>
-<button><a href="chemistry.html">Chemistry Stuffie</a></button>
+    <button><a href="maths.html">Maths Stuffie</a></button>
+    <button><a href="electrical.html">Electrical Stuffie</a></button>
+    <button><a href="itp.html">Python Stuffie</a></button>
+    <button><a href="mechanical.html">Mechanical Stuffie</a></button>
+    <button><a href="govt.html">SST Reasoning Stuffie</a></button>
+    <button><a href="english.html">English Stuffie</a></button>
+    <button><a href="chemistry.html">Chemistry Stuffie</a></button>
+  </body>
+</html>
