--- a/electrical.html
+++ b/electrical.html
@@ -5,11 +5,10 @@
 >
 </iframe>
 <iframe src="pdfs/Electrical Lab.pdf" width="100%" height="600px"> </iframe>
-<iframe
-  src="pdfs/Exp 3 and 4 Basic Electrical Lab.pdf"
-  width="100%"
-  height="600px"
->
+<iframe src="pdfs/QaatilYeRukhTeraHai.pdf" width="100%" height="600px">
 </iframe>
 <iframe src="pdfs/BASIC ELECTRICS NOTES 2.pdf" width="100%" height="600px">
 </iframe>
+<iframe src="pdfs/D.K. Bose (sped up).pdf" width="100%" height="600px">
+</iframe>
+<iframe src="pdfs/Advertisement;(.pdf" width="100%" height="600px"> </iframe>
