--- a/english.html
+++ b/english.html
@@ -1,2 +1,3 @@
 <iframe src="pdfs/English SSI.pdf" width="100%" height="600px"> </iframe>
 <iframe src="pdfs/English SSI 2.pdf" width="100%" height="600px"> </iframe>
+<iframe src="pdfs/ikHoGyeHumAurTum.pdf" width="100%" height="600px"> </iframe>
