--- a/mechanical.html
+++ b/mechanical.html
@@ -3,3 +3,4 @@
 <iframe src="pdfs/Mechanical Lab work 1.pdf" width="100%" height="600px">
 </iframe>
 <iframe src="pdfs/machine shop.pdf" width="100%" height="600px"> </iframe>
+<iframe src="pdfs/TujheBhulaDiya.pdf" width="100%" height="600px"> </iframe>
