--- a/govt.html
+++ b/govt.html
@@ -1,3 +1,4 @@
 <iframe src="pdfs/Reasoning and Aptitude.pdf" width="100%" height="600px">
 </iframe>
 <iframe src="pdfs/SST RJN.pdf" width="100%" height="600px"> </iframe>
+<iframe src="pdfs/Reasoning 2.pdf" width="100%" height="600px"> </iframe>
