--- a/itp.html
+++ b/itp.html
@@ -13,3 +13,5 @@
 <iframe src="pdfs/ITP assignment 3.pdf" width="100%" height="600px"> </iframe>
 <iframe src="pdfs/ITP week 2 practical.pdf" width="100%" height="600px">
 </iframe>
+<iframe src="pdfs/Wk 3 4 5.pdf" width="100%" height="600px"> </iframe>
+<iframe src="pdfs/module 4.pdf" width="100%" height="600px"> </iframe>
