--- a/electrical.html
+++ b/electrical.html
@@ -12,3 +12,5 @@
 <iframe src="pdfs/D.K. Bose (sped up).pdf" width="100%" height="600px">
 </iframe>
 <iframe src="pdfs/Advertisement;(.pdf" width="100%" height="600px"> </iframe>
+<iframe src="pdfs/🥺 barbaad holidays 🥺.pdf" width="100%" height="600px">
+</iframe>
