--- a/mechanical.html
+++ b/mechanical.html
@@ -4,3 +4,8 @@
 </iframe>
 <iframe src="pdfs/machine shop.pdf" width="100%" height="600px"> </iframe>
 <iframe src="pdfs/TujheBhulaDiya.pdf" width="100%" height="600px"> </iframe>
+<iframe src="pdfs/Jab koi baat Bigad Jaaye🫠.pdf" width="100%" height="600px">
+</iframe>
+<iframe src="pdfs/Tum Dena Saath Meraa ️️🥺.pdf" width="100%" height="600px">
+</iframe>
+<iframe src="pdfs/Belcom 🫠.pdf" width="100%" height="600px"> </iframe>
